# drivebrain_software

./: .clang-format  .clangd  .gitignore  CANComms_8cpp.html  CANComms_8cpp__incl.map  CANComms_8cpp__incl.md5  CANComms_8hpp.html  CANComms_8hpp__dep__incl.map  CANComms_8hpp__dep__incl.md5  CANComms_8hpp__incl.map  CANComms_8hpp__incl.md5  CANComms_8hpp_source.html  CMakeLists.txt  Configurable_8cpp.html  Configurable_8cpp__incl.map  Configurable_8cpp__incl.md5  Configurable_8hpp.html  Configurable_8hpp__dep__incl.map  Configurable_8hpp__dep__incl.md5  Configurable_8hpp__incl.map  Configurable_8hpp__incl.md5  Configurable_8hpp_source.html  ControllerManager_8hpp.html  ControllerManager_8hpp__dep__incl.map  ControllerManager_8hpp__dep__incl.md5  ControllerManager_8hpp__incl.map  ControllerManager_8hpp__incl.md5  ControllerManager_8hpp_source.html  Controller_8hpp.html  Controller_8hpp__dep__incl.map  Controller_8hpp__dep__incl.md5  Controller_8hpp__incl.map  Controller_8hpp__incl.md5  Controller_8hpp_source.html  Controllers_8hpp.html  Controllers_8hpp__incl.map  Controllers_8hpp__incl.md5  Controllers_8hpp_source.html  DBServiceImpl_8cpp.html  DBServiceImpl_8cpp__incl.map  (+587 more)
.github/workflows/: docs.yml  unit_tests.yml
cmake/: CAN_driverConfig.cmake.in  ETH_driverConfig.cmake.in  db_service_implConfig.cmake.in  drivebrain_appConfig.cmake.in  drivebrain_common_utilsConfig.cmake.in  drivebrain_commsConfig.cmake.in  drivebrain_controlConfig.cmake.in  drivebrain_coreConfig.cmake.in  drivebrain_estimationConfig.cmake.in  drivebrain_mcap_loggerConfig.cmake.in  foxglove_param_serverConfig.cmake.in  foxglove_serverConfig.cmake.in
config/: config_test.json  drivebrain_config.json  example_config.json
config/test_config/: can_driver.json  hytech.dbc  test_dbc.dbc
drivbrain_core/include/: Configurable.hpp  JsonFileHandler.hpp  Parameter.hpp
drivbrain_core/src/: JsonFileHandler.cpp
drivebrain_app/: CMakeLists.txt  DriveBrainApp.hpp  debug_main.cpp  example_boost_asio_can.cpp  main.cpp
drivebrain_app/include/: DriveBrainApp.hpp  SimpleTorqueController.hpp  TorqueController.hpp
drivebrain_app/src/: DriveBrainApp.cpp
drivebrain_common/include/: Configurable.hpp  ParameterServer.hpp
drivebrain_comms/base_driver/include/: Driver.hpp
drivebrain_comms/car_CAN_driver/: car_CAN_driver.md
drivebrain_comms/foxglove_param_server/: foxglove_param_server.md
drivebrain_comms/foxglove_param_server/include/: param_server.hpp
drivebrain_comms/foxglove_param_server/src/: param_server.cpp
drivebrain_comms/foxglove_param_server/test/: main.cpp
drivebrain_control/include/: Controller.hpp  ControllerManager.hpp
drivebrain_core/include/: Configurable.hpp
drivebrain_core/src/: JsonFileHandler.cpp
drivebrain_core_base/include/: Configurable.hpp  ConfigurationServer.hpp  Controller.hpp  PubSub.hpp  Telemetry.hpp  VehicleManager.hpp
drivebrain_core_base/include/public/: Configurable.hpp  Controller.hpp  ControllerManager.hpp  ControllerManager.tpp  DrivebrainBase.hpp  Driver.hpp  DriverBus.hpp  JsonFileHandler.hpp  Literals.hpp  Logger.hpp  MessageLogger.hpp  MsgLogger.hpp  ProtobufUtils.hpp  PubSub.hpp  StateEstimator.hpp  Utils.hpp  VehicleDataTypes.hpp  VehicleManager.hpp
drivebrain_core_base/src/: Configurable.cpp  JsonFileHandler.cpp  Logger.cpp  StateEstimator.cpp  VehicleManager.cpp  VehicleMsgConversion.cpp
drivebrain_core_impl/: docs.md
drivebrain_core_impl/drivebrain_common_utils/include/: JSONUtils.hpp  ParamLogger.hpp  ProtobufUtils.hpp
drivebrain_core_impl/drivebrain_common_utils/src/: ParamLogger.cpp  ProtobufUtils.cpp
drivebrain_core_impl/drivebrain_comms/: README.md  docs.md
drivebrain_core_impl/drivebrain_comms/include/: AeroComms.hpp  CANComms.hpp  DBServiceImpl.hpp  MCUETHComms.hpp  SWComms.hpp  VNComms.hpp  foxglove_server.hpp
drivebrain_core_impl/drivebrain_comms/src/: AeroComms.cpp  CANComms.cpp  DBServiceImpl.cpp  MCUETHComms.cpp  SWComms.cpp  VNComms.cpp  foxglove_server.cpp
drivebrain_core_impl/drivebrain_control/include/: Controllers.hpp  SimpleController.hpp  SimpleSpeedController.hpp  SimpleTorqueController.hpp
drivebrain_core_impl/drivebrain_control/src/: SimpleController.cpp  SimpleSpeedController.cpp  SimpleTorqueController.cpp
drivebrain_core_impl/drivebrain_estimation/: README.md
drivebrain_core_impl/drivebrain_estimation/include/: LapTracker.h  MatlabMath.hpp  PerformanceTracker.hpp  StateEstimator.hpp
drivebrain_core_impl/drivebrain_estimation/src/: LapTracker.cpp  MatlabMath.cpp  PerformanceTracker.cpp  StateEstimator.cpp
drivebrain_core_impl/drivebrain_logging/include/: DrivebrainMCAPLogger.hpp  MCAPProtobufLogger.hpp
drivebrain_core_impl/drivebrain_logging/src/: DrivebrainMCAPLogger.cpp  MCAPProtobufLogger.cpp
drivebrain_core_impl/drivebrain_mcap_logger/: README.md
proto/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+66 more)
test/: test_aero.cpp  test_can_driver.cpp  test_configurable.cpp  test_controller_manager.cpp  test_db_interace_grpc_service.cpp  test_dbcan.cpp  test_driver_base.cpp  test_foxglove_server.cpp  test_json_schema_creation.cpp  test_live_can_recv.cpp  test_mcap_telem_sim.cpp  test_mcu.cpp  test_mcu_send.cpp  test_msglogger.cpp  test_param_server.cpp  test_port.py  test_print.cpp  test_swcomms.cpp  test_vn.cpp
test/test_mcap/: BuildFileDescriptorSet.cpp  BuildFileDescriptorSet.h  test_mcap_logging.cpp
test/test_mcap_replay/include/: helper.hpp  socket.hpp
tests/: test_controller_manager.cpp
unit_test/: SimpleControllerTest.cpp  SimpleSpeedControllerTest.cpp  SimpleTorqueControllerTest.cpp  main.cpp  test_controller_manager.cpp
version_header/: versions.h.in
(+21 files in other folders)
